# aihero

./: README.md
app/: .env  README.md  app.py  ingest.py  main.py  pyproject.toml  requirements.txt  search_agent.py  search_tools.py  ultralytics_embeddings.py
app/logs/: gh_agent_20251002_123511_89edf3.json  gh_agent_20251002_123809_5a826c.json  gh_agent_20251002_124525_5110ba.json  gh_agent_20251002_130205_657a8d.json  gh_agent_20251002_131727_68924b.json  gh_agent_20251002_213627_3bfd5b.json  gh_agent_20251002_220854_42395a.json  gh_agent_20251003_114202_13080b.json  gh_agent_20251003_123238_ca775f.json  gh_agent_20251003_123352_f2a35b.json  gh_agent_20251003_125401_75143d.json  gh_agent_20251003_130056_b27ada.json  gh_agent_20251003_131954_574bd5.json  gh_agent_20251003_132904_9a49fa.json  gh_agent_20251003_142901_8691a2.json  gh_agent_20251003_142943_1cf63c.json  gh_agent_20251003_143103_d0ca56.json  gh_agent_20251003_143245_598608.json  gh_agent_20251003_143901_93b213.json  gh_agent_20251003_144050_b58c12.json  gh_agent_20251003_151047_3e8d13.json  gh_agent_20251003_151926_801d2f.json  gh_agent_20251003_151927_047e42.json  gh_agent_20251003_205804_80266f.json  gh_agent_20251003_205831_7755a3.json  gh_agent_20251003_205918_18075b.json  gh_agent_20251003_210018_fd6a19.json  gh_agent_20251003_210436_0a12cb.json  gh_agent_20251004_091536_d27ebf.json  gh_agent_20251004_091554_d6b64f.json  gh_agent_20251004_091628_87a243.json  gh_agent_20251004_105224_dd6b27.json  gh_agent_20251004_105510_e4741d.json  (+19 more)
course/: main.py  (+2 more)
project/: pyproject.toml  read_repo_data.ipynb
(+33 files in other folders)
